--- a/src/BlazingMahi.Mcombo/BlazingMahi.Mcombo.csproj
+++ b/src/BlazingMahi.Mcombo/BlazingMahi.Mcombo.csproj
@@ -3,12 +3,32 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RazorLangVersion>3.0</RazorLangVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>0.1.0</Version>
+    <Authors>Tyler Parkerson</Authors>
+    <Description>Blazor combo selection component that displays selection options in a grid type layout.</Description>
+    <Copyright>Copyright 2020 (c) Tyler Parkerson. All rights reserved.</Copyright>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageIcon>BlazoingMahiLogo.png</PackageIcon>
+    <RepositoryUrl>https://github.com/BlazingMahi/Mcombo</RepositoryUrl>
   </PropertyGroup>
 
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.8" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <None Include="..\..\BlazoingMahiLogo.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
