--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -24,8 +24,8 @@ jobs:
       run: dotnet publish sample/SampleApp/SampleApp.csproj -c Release -o release --nologo
     
     # changes the base-tag in index.html from '/' to 'BlazorGitHubPagesDemo' to match GitHub Pages repository subdirectory
-    - name: Change base-tag in index.html from / to Mbutton
-      run: sed -i 's/<base href="\/" \/>/<base href="\/Mbutton\/" \/>/g' release/wwwroot/index.html
+    - name: Change base-tag in index.html from / to Mcombo
+      run: sed -i 's/<base href="\/" \/>/<base href="\/Mcombo\/" \/>/g' release/wwwroot/index.html
     
     # copy index.html to 404.html to serve the same file when a file is not found
     - name: copy index.html to 404.html
